# fastoverlap

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: fo_test_ase.py
fastoverlap/: periodicAlignment.py  soft.py  sphericalAlignment.py  utils.py
fastoverlap/f90/: DSOFT.f90  LOG  alignutils.f90  bnbalign.f90  fastbulk.f90  fastclusters.f90  fastutils.f90  legendre.f90
