[build-system]
requires = ["scikit-build-core>=0.4.3", "numpy>=1.17.0", "cmake>=3.15"]
build-backend = "scikit_build_core.build"

[project]
name = "fastoverlap"
version = "0.1"
description = "Algorithms for fast alignment of atomic structures in finite and periodic systems"
authors = [
    {name = "Matthew Griffiths", email = "matthewghgriffiths@gmail.com"},
]
requires-python = ">=3.7"
license = {text = "GNU General Public License"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/matthewghgriffiths/fastoverlap"
Issues = "https://github.com/matthewghgriffiths/fastoverlap/issues"

[tool.scikit-build]
cmake.minimum-version = "3.15"
wheel.packages = ["fastoverlap"]
wheel.exclude = ["*.f90"]  # Don't include source files in wheel
