[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "numpy>=1.19.0",
    "cmake>=3.20",
    "setuptools>=45",
    "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "fastoverlap"
version = "0.1"
description = "Algorithms for fast alignment of atomic structures in finite and periodic systems"
authors = [
    {name = "Matthew Griffiths", email = "matthewghgriffiths@gmail.com"},
]
maintainers = [
    {name = "Matthew Griffiths", email = "matthewghgriffiths@gmail.com"},
]
requires-python = ">=3.8"
license = {text = "GNU General Public License v2 (GPLv2)"}
readme = "README.md"
keywords = ["atomic structures", "alignment", "periodic systems",
            "finite systems", "branch and bound algorithm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Fortran",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "munkres>=1.1.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0"
]

[project.optional-dependencies]
ase = ["ase>=3.20.0"]
examples = ["ase>=3.20.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
all = [
    "ase>=3.20.0",
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/matthewghgriffiths/fastoverlap"
Issues = "https://github.com/matthewghgriffiths/fastoverlap/issues"

[tool.scikit-build]
wheel.packages = ["fastoverlap"]
wheel.exclude = ["*.f90", "*.c", "*.cpp", "*.h"]  # Don't include source files in wheel
cmake.build-type = "Release"
minimum-version = "0.4.3"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "ON"
CMAKE_BUILD_TYPE = "Release"

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=fastoverlap --cov-report=term-missing --cov-report=html"
